# GamebianOS

./: .gitignore
Docs/: README.md
gambian-iso/: README.md  build.sh  setup.sh
gambian-iso/docs/: DEBIAN-STEAM-GAMESCOPE.md  STEAM-BOOT-AND-SESSIONS.md
gambian-iso/overlay/bootloaders/grub-efi/: theme.cfg
gambian-iso/overlay/bootloaders/grub-pc/: theme.cfg
gambian-iso/overlay/hooks/normal/: 993-enable-bluetooth.hook.chroot  994-gamebian-gamescope-path.hook.chroot  995-gamebian-apt-contrib-nonfree.hook.chroot  995-gamebian-steam-bigpicture-bin.hook.chroot  996-gamebian-inotify-pip.hook.chroot  997-gamebian-extra-apt-packages.hook.chroot  997-x-www-browser.hook.chroot  998-gamebian-controller-menu.hook.chroot  998-gamebian-grub-branding.hook.chroot  999-gamebian-icon-cache.hook.chroot  999-gamebian-usb-wakeup.hook.chroot
gambian-iso/overlay/includes.chroot/: Untitled
gambian-iso/overlay/package-lists/: gamebian-retroarch.list.chroot  gamebian-web.list.chroot  gamescope-build.list.chroot  openbox.list.chroot
openbox-live/: README.md  build.sh  setup.sh
openbox-live/overlay/hooks/normal/: 997-x-www-browser.hook.chroot  999-gamebian-desktop.hook.chroot
openbox-live/overlay/package-lists/: openbox.list.chroot
share/: merge-calamares-gamebian.sh
share/calamares-gamebian/etc/calamares/: settings.conf
share/gamebian/: gamebian_controller_menu.py  generate-color-themes.py  install-grub-branding.sh
share/themes/: README.md  pyproject.toml
share/themes/data/: gamebian-theme.desktop
share/themes/gamebian_theme/: __init__.py  __main__.py  app.py  persist.py
(+136 files in other folders)
