[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gamebian-theme"
version = "0.1.0"
description = "Gamebian wallpaper and GTK/Openbox theme switcher"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
gamebian-theme = "gamebian_theme.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gamebian_theme"]
